codegen/ui_tests/export_fn_raw_noreturn.stderr
error: functions marked with 'return_raw' must return Result<Dynamic, Box<EvalAltResult>>
  --> $DIR/export_fn_raw_noreturn.rs:10:5
   |
10 | pub fn test_fn(input: &mut Point) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> $DIR/export_fn_raw_noreturn.rs:19:5
   |
19 |     test_fn(&mut n);
   |     ^^^^^^^ not found in this scope
